tests/baselines/reference/inferentialTypingWithFunctionTypeSyntacticScenarios.errors.txt
tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts(8,9): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts(11,9): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts(14,9): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts(21,9): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts(25,9): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts(28,9): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts(31,9): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts(34,9): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.


==== tests/cases/compiler/inferentialTypingWithFunctionTypeSyntacticScenarios.ts (8 errors) ====
    
    declare function map<T, U>(array: T, func: (x: T) => U): U;
    declare function identity<V>(y: V): V;
    var s: string;
    
    // dotted name
    var dottedIdentity = { x: identity };
    s = map("", dottedIdentity.x);
            ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
    
    // index expression
    s = map("", dottedIdentity['x']);
            ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
    
    // function call
    s = map("", (() => identity)());
            ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
    
    // construct
    interface IdentityConstructor {
        new (): typeof identity;
    }
    var ic: IdentityConstructor;
    s = map("", new ic());
            ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
    
    // assignment
    var t;
    s = map("", t = identity);
            ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
    
    // type assertion
    s = map("", <typeof identity>identity);
            ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
    
    // parenthesized expression
    s = map("", (identity));
            ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.
    
    // comma
    s = map("", ("", identity));
            ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.